--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -43,3 +43,11 @@
       - memcached
   tags: packages
 
+- name: add memcached configuration
+  template:
+    src: memcached.conf.j2
+    dest: /etc/memcached.conf
+    mode: 0644
+  become: yes
+  notify:
+    - restart memcached
