Enable Datadog's APM in UK staging
We need to be able to test changes in monitoring quickly and reliably
without having to risk production. This will incur in extra cost but
it'll save money in dev hours testing things in the long run.

--- a/inventory/host_vars/staging.openfoodnetwork.org.uk/config.yml
+++ b/inventory/host_vars/staging.openfoodnetwork.org.uk/config.yml
@@ -7,3 +7,5 @@ rails_env: staging
 admin_email: dev.ofnuk@gmail.com
 
 unicorn_timeout: 120
+
+enable_rails_apm: "true" # has to be explicitly defined as a string due to some datadog bug
