Fix APM configuration to make it work with agent v6
staging.openfoodnetwork.org.uk reports

```
Agent 6.13.0 - Commit: df8e880 - Serialization version: 4.7.1 - Go version: go1.11.5
```

and according to the Ansible role docs https://github.com/DataDog/ansible-datadog#apm

> To enable APM with agent V6:
>
> datadog_config:
>    apm_config:
>        enabled: true

Besides, grepping the logs returned

> 2019-09-05 13:39:49 UTC | CORE | WARN | (pkg/util/log/log.go:482 in func1) | Unknown key in config file: apm_enabled
> 2019-09-05 14:32:03 UTC | CORE | WARN | (pkg/util/log/log.go:482 in func1) | Unknown key in config file: apm_enabled
> 2019-09-09 14:35:36 UTC | CORE | WARN | (pkg/util/log/log.go:482 in func1) | Unknown key in config file: apm_enabled
> 2019-09-09 14:35:36 UTC | TRACE | WARN | (pkg/util/log/log.go:482 in func1) | Unknown key in config file: apm_enabled

--- a/roles/datadog/tasks/main.yml
+++ b/roles/datadog/tasks/main.yml
@@ -10,7 +10,8 @@
         - "env:{{ rails_env }}"
         - "host-id:{{ host_id | default(ansible_limit) }}"
       logs_enabled: true
-      apm_enabled: "{{ enable_rails_apm | default('false') }}"
+      apm_config:
+        enabled: "{{ enable_rails_apm | default('false') }}"
     datadog_config_ex:
       trace.config:
         env: "{{ rails_env }}"
