--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -55,8 +55,7 @@
         env: user
         version: v1.0.0
         default_ruby: "{{ ruby_version }}"
-        rubies:
-          - version: "{{ ruby_version }}"
+        rubies: "{{ ruby_versions }}"
 
       rbenv_users:
         - "{{ unicorn_user }}"
