Allow setting an alternate region for S3 backups bucket

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -20,9 +20,10 @@ google_maps_api_key:
 # Set these if using Amazon S3
 #s3_access_key:
 #s3_secret:
-#s3_region:
 #s3_images_bucket:
+#s3_region:
 #s3_backups_bucket:
+#s3_backups_region:
 
 # Stripe Connect API keys
 # Find these under 'API keys' and 'Connect' in your Stripe account dashboard -> Account Settings
