Add www and non-www support for certbot fr-prod

--- a/inventory/host_vars/www.openfoodfrance.org/config.yml
+++ b/inventory/host_vars/www.openfoodfrance.org/config.yml
@@ -11,6 +11,10 @@ mail_domain: openfoodfrance.org
 unicorn_timeout: 240
 unicorn_workers: 4
 
+certbot_domains:
+  - www.openfoodfrance.org
+  - openfoodfrance.org
+
 postgres_listen_addresses:
   - '*'
 
