--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -9,6 +9,15 @@
     - include: ../roles/shared_handlers/handlers/main.yml
 
   tasks:
+    - name: Check we're not deploying master to production
+      pause:
+        prompt: |
+          WARNING: The current settings will deploy `master` branch to a production server!
+          Check for typos in the command if deploying a release, otherwise type YES to proceed
+      when: inventory_hostname in groups['all-prod'] and git_version == "master"
+      register: deployment_check
+      failed_when: deployment_check.user_input != "YES"
+
     - block:
       - include_role:
           name: deploy
