--- a/inventory/host_vars/openfoodnetwork.org.au/config.yml
+++ b/inventory/host_vars/openfoodnetwork.org.au/config.yml
@@ -31,3 +31,5 @@ custom_hba_entries:
 
 custom_application_env_vars: |
   OFN_FEATURE_CONNECT_AND_LEARN: "true"
+
+enable_rails_apm: "true" # has to be explicitly defined as a string due to some datadog bug
