Manage repo's dependencies through pip
This brings in the [requirements
file](https://pip.readthedocs.io/en/1.1/requirements.html) Python uses
to manage dependencies with Pip, Python's package manager.

Then, as we do with `bundle install`, when dependencies are changed, you
need to run `pip install -r requirements.txt`.

It makes use of [Pyenv](https://github.com/pyenv/pyenv) (an Rbenv's
clone to manage Python versions) and its
[pyenv-virtualenv](https://github.com/pyenv/pyenv-virtualenv) plugin.
This relies on a [virtualenv](https://virtualenv.pypa.io/en/latest/) set
up in your environment called `ofn-install`. It's the same of RVM's
gemsets but it's the way Python isolates dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,7 @@ before_install:
     fi
 
 install:
-  - pip install 'ansible==2.9.6'
-  - pip install 'ansible-lint==4.1.0'
+  - pip install -r requirements.txt
 
 script:
   - bin/setup
