Use unicorn-worker-killer on all prod/staging servers
Looser settings applied to Aus

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -180,6 +180,8 @@ unicorn_pid: "{{ pid_path }}/unicorn.pid"
 unicorn_sock: "{{ sock_path }}/unicorn.{{ app }}.sock"
 unicorn_workers: 2
 unicorn_timeout: 30
+unicorn_env_vars: |
+  KILL_UNICORNS=true
 
 #----------------------------------------------------------------------
 # Memcached variables
