Reload unicorn on deploy instead of restart
This change means that if a unicorn worker is part-way through serving a request at the point of deployment, it will be restarted as soon as it's finished instead of killing the request.

Also adds a quick check for cases where unicorn is not running yet (on first deploy for example) which would otherwise throw an error (you can't reload a service that hasn't been started yet).

--- a/roles/deploy/tasks/deploy.yml
+++ b/roles/deploy/tasks/deploy.yml
@@ -71,7 +71,7 @@
   tags:
     - bundle_app
     - skip_ansible_lint
-  notify: restart unicorn
+  notify: reload unicorn
 
 # Update the database
 
@@ -98,7 +98,7 @@
   tags:
     - rake
     - skip_ansible_lint
-  notify: restart unicorn
+  notify: reload unicorn
 
 - name: seed database
   command: bash -lc "bundle exec rake db:seed RAILS_ENV={{ rails_env }}"
@@ -107,7 +107,7 @@
   tags:
     - seed
     - skip_ansible_lint
-  notify: restart unicorn
+  notify: reload unicorn
 
 # Precompile assets
 
