--- a/roles/deploy/tasks/deploy.yml
+++ b/roles/deploy/tasks/deploy.yml
@@ -127,18 +127,7 @@
   args:
     removes: "{{ build_path }}"
   changed_when: True
-
-# Restart and update
-
-- name: restart delayed job service
-  service:
-    name: delayed_job_{{ app }}
-    state: restarted
-  become: yes
-  become_user: root
-
-- name: update whenever
-  command: bash -lc "bundle exec whenever --set 'environment={{ rails_env }}' --update-crontab"
-  changed_when: True
-  args:
-    chdir: "{{ current_path }}"
+  notify:
+    - reload unicorn
+    - restart delayed_job
+    - update whenever
