Enable Ansible "Pipelining" feature
Reduces the number of active connections and the amount of data transferred by Ansible when it runs tasks. This should reduce latency issues during trans-atlantic playbook execution...

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,4 +7,5 @@ callback_whitelist = profile_tasks
 
 # Needed to resolve a problem with task output
 [ssh_connection]
+pipelining = True
 control_path = %(directory)s/%%h-%%r
