Use "free" strategy in provision and deploy playbooks
When running playbooks against multiple hosts, Ansible will normally wait until each server has completed a task before moving to the next one. Using the "free" strategy in a playbook disables this behaviour; tasks will proceed on each server as quickly as they can.

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -1,6 +1,7 @@
 ---
 - name: deploy
   hosts: ofn_servers
+  strategy: free
   remote_user: "{{ user }}"
   become: yes
   become_user: "{{ unicorn_user }}"
