Use latest pre-installed Python in xenial
It seems a good trade-off given `geerlingguy.postgresql` fails on
bionic due to PostgreSQL 10.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 ---
 sudo: required
-dist: bionic
+dist: xenial
 cache: bundler
 language: python
-python: 3.8
+python: 3.7.1
 services:
   - postgresql
 addons:
