Add zapier configs to ca-prod

--- a/inventory/host_vars/openfoodnetwork.ca/config.yml
+++ b/inventory/host_vars/openfoodnetwork.ca/config.yml
@@ -13,3 +13,9 @@ unicorn_timeout: 120
 certbot_domains:
   - openfoodnetwork.ca
   - www.openfoodnetwork.ca
+
+postgres_listen_addresses:
+  - '*'
+
+custom_hba_entries:
+  - { type: hostssl, database: "{{ db }}", user: zapier, address: '54.86.9.50/32', auth_method: md5 }
