Break up incredibly long line for ansibe-lint

--- a/roles/migrate_assets/tasks/rsync_assets.yml
+++ b/roles/migrate_assets/tasks/rsync_assets.yml
@@ -9,7 +9,9 @@
     rsync_opts:
       - "--chown={{ unicorn_user }}:{{ unicorn_user }}"
   vars:
-    ansible_ssh_extra_args: "-l {{ unicorn_user }} -o ControlMaster=auto -o ControlPersist=60s -o ForwardAgent=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ConnectTimeout=600"
+    ansible_ssh_extra_args: >
+      -l {{ unicorn_user }} -o ForwardAgent=yes -o UserKnownHostsFile=/dev/null
+      -o StrictHostKeyChecking=no -o ConnectTimeout=600
   loop: "{{ migrate_dirs }}"
   loop_control:
     loop_var: migrate_dir
