Use user with the necessary permissions
This is because the app is in the unicorn user's home directory it's not
letting the ofn-admin user make directories there

--- a/playbooks/transfer_assets.yml
+++ b/playbooks/transfer_assets.yml
@@ -5,7 +5,7 @@
 
 - name: Transfer assets
   hosts: ofn_servers
-  remote_user: "{{ user }}"
+  remote_user: "{{ unicorn_user }}"
 
   pre_tasks:
     - name: ensure rsync target is valid and singular
